# learn-maturin

2-pig-latin/: .gitignore  Cargo.toml  pixi.toml
2-pig-latin/example/: run.py
2-pig-latin/src/: distances.rs
3-hello-world/: Cargo.toml  README.md  pixi.toml  pyproject.toml
3-hello-world/hello_world/: __main__.py
3-hello-world/src/: lib.rs
4-piglet-latin/: Cargo.toml  README.md  pixi.toml  pyproject.toml
4-piglet-latin/example/: run.py
4-piglet-latin/expression_lib/: language.py
4-piglet-latin/src/: expressions.rs  lib.rs
