[package]
name = "expression_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "expression_lib"
crate-type = ["cdylib"]

[dependencies]
num = "*"
polars = { version = "*", features = ["timezones", "allow_unused"] }
polars-arrow = { version = "*" }
pyo3 = { version = "*", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "*", features = ["derive"] }
rayon = "*"
serde = { version = "*", features = ["derive"] }
